# piper

./: Cargo.toml  README.md  piper-csv-viewer.html
examples/: external_node_pipeline.rs  fork_join_feeder.rs  fork_join_pipeline.rs  pipeline_api_styles.rs  piper_pipeline.rs  scaling_pipeline.rs  scaling_pipeline_feeder.rs
piper-macros/: Cargo.toml
piper-macros/src/: lib.rs
src/: lib.rs  main.rs
src/channel/: mod.rs
tests/: channel_features.rs  macro.rs  runtime.rs
tests/trybuild/: graph_type_fail.rs  graph_type_fail.stderr  pipeline_pass.rs
